--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.8.2",
+    "formik": "^2.2.9",
+    "rc-progress": "^3.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.2",
     "web-vitals": "^2.1.4",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.8/xlsx-0.18.8.tgz"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.8/xlsx-0.18.8.tgz",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
