--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.8.2",
+    "firebase-admin": "^10.2.0",
     "formik": "^2.2.9",
     "rc-progress": "^3.3.3",
     "react": "^18.1.0",
